--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,87 @@
 html, body, h1, h2, h3, h4, h5, h6, p, a, span, form, label, div {
     font-family: 'Rubik', sans-serif;
 }
+
+/* Common CSS */
+/* primary color - #f1ca86 */
+html, body { background-color: white; }
+.mt30 { margin-top: 30px; }
+.mt25 { margin-top: 25px; }
+.pt150 { padding-top: 150px; }
+.pt250 { padding-top: 250px; }
+.pt20 { padding-top: 20px; }
+.pt10 { padding-top: 10px; }
+.whitetext { color: white; }
+.button-primary { color: #252525; border: 1px solid #ceac71; font-weight: bold; background: #f1ca86; border-radius: 20px; }
+.button-primary:hover { color: #333; }
+
+/* Home Page CSS */
+img.logoimg{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+.menubanner-section{
+    background: url('../img/banner.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 600px;
+}
+nav.mainnav{
+    background-color: #252525;
+    border-color: #333;
+    border-radius: 0px;
+}
+nav.mainnav ul.leftmenu li a{
+    color: #f1ca86;
+    text-transform: uppercase;
+}
+nav.mainnav ul.leftmenu li a:hover{ color: #ceac71; }
+nav.mainnav ul.rightmenu li a{ color: white; }
+nav.mainnav ul.rightmenu li a:hover{ color: #e0e0e0; }
+.primarytext-wrap p, .primarytext-wrap h2{
+    margin: 0px;
+    color: white;
+}
+.primarytext-wrap p.firstline { font-size: 30px; }
+.primarytext-wrap h2 { font-size: 60px; font-weight: bold; }
+.primarytext-wrap p.lastline { font-size: 18px; }
+.maintext-section{ padding-top: 20px; padding-bottom: 30px; }
+.maintext-section h1{ text-align: center; font-size: 32px; }
+.maintext-section p{ text-align: center; font-size: 20px; }
+.course-section{
+    background: url('../img/section_2_bg.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 400px;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    color: white;
+}
+.course-section h4.course { text-transform: uppercase; border-bottom: 2px solid #f1ca86; padding-bottom: 5px; display: inline-block; }
+.course-section h2.coursename { font-weight: bold; font-size: 40px; margin-top: 10px; }
+.ourmission-section{
+    background: url('../img/section_3_bg.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 500px;
+    background-color: #f3f4f4;
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+.ourmission-section h1.ourmission { font-weight: bold; font-size: 40px; }
+.ourmission-section p { font-size: 15px; }
+.ourmission-section h1.ourmission span { background-color: #f1ca86; padding-left: 10px; }
+.trainer-section{ height: 600px; }
+.trainer-section p.trainer-name { background-color: #f1ca86; color: #252525; display: inline-block; margin: 0px; 
+    padding: 6px 10px; font-size: 20px; top: -145px; position: relative; left: 160px; }
+.trainer-section p.trainer-desig { background-color: #ffffff; color: #252525; display: inline-block;  padding: 6px 10px; 
+    font-size: 20px; top: -144px; position: relative; left: 160px; box-shadow: 2px 2px 2px 2px #ddd; }
+.media-section, .footer-section, .enquiry-section{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background: #F3F6F7;
+}
+.enquiry-section { background: #f1ca86; }
+.enquiry-section .enquirep { text-transform: uppercase; font-weight: bold; color: white; text-shadow: 1px 1px 2px #333; }
+.enquiry-section .callnow { text-transform: uppercase; font-weight: bold; font-size: 20px; margin-top: 20px; background: white; padding: 20px; display: inline-block; border-radius: 35px; color: #333; text-shadow: 1px 1px 1px #868686; }
+.media-section .inmediatext{ text-transform: uppercase; padding-bottom: 5px; margin-bottom: 20px; border-bottom: 2px solid #f1ca86; display: inline-block; }
+.media-section .ourtrainertext{ padding-top: 150px; padding-left: 20px; }
+.footer-section p, .footer-section address, .footer-section a { color: #aeaeae; }
+.footer-section p.blacktext { color: #252525; text-transform: uppercase; font-weight: bold; font-size: 13px; }
